[package]
name = "derived-deref"
version = "2.0.1"
edition = "2021"
description = "Crate for deriving the `Deref` and `DerefMut` traits"
repository = "https://github.com/Sapiet1/derived-deref"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
